--- a/GeoMaps/area_fixate/static/area_fixate/css/style.css
+++ b/GeoMaps/area_fixate/static/area_fixate/css/style.css
@@ -1,5 +1,5 @@
 .div-form {
-    margin: 5%;
+    margin-top: 10%;
     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
     border: 1px solid rgba(0, 0, 255, .2);
     max-width: 300px;
