--- a/GeoMaps/area_fixate/templates/area_fixate/index.html
+++ b/GeoMaps/area_fixate/templates/area_fixate/index.html
@@ -16,17 +16,17 @@
         <form action="{% url 'get_by_cadastral' %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button class="form-button button is-normal is-primary" type="submit">Search</button>
+            <button class="form-button button is-normal is-primary" type="submit">Найти</button>
         </form>
+        {% if status %}
+        <a href={{map_link}} target="_blank">
+            <button class="form-button button is-normal is-primary">Показать</button>
+        </a>
+        <p>Время: {{time}}</p>
+        {% endif %}
     </div>
 </div>
-<div class="columns is-centered">
-    <div class="column is-half">
-        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                src="{{map}}"
-                style="border: 1px solid black"></iframe>
-        <br/><small><a href="https://www.openstreetmap.org/#map=19/55.33119/89.80088">Посмотреть более крупную карту</a></small>
-    </div>
+
 </div>
 </body>
 </html>
